k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jam
  labels:
    app.kubernetes.io/name: jam
    app.kubernetes.io/part-of: jam
