k8s/base/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: jam-frontend
  labels:
    app.kubernetes.io/name: jam-frontend
    app.kubernetes.io/part-of: jam
spec:
  selector:
    app.kubernetes.io/name: jam-frontend
    app.kubernetes.io/part-of: jam
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jam-frontend
  labels:
    app.kubernetes.io/name: jam-frontend
    app.kubernetes.io/part-of: jam
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jam-frontend
      app.kubernetes.io/part-of: jam
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jam-frontend
        app.kubernetes.io/part-of: jam
    spec:
      containers:
        - name: frontend
          image: docker.io/ktistos/myjam-frontend:dev-204a4ab-20260419191921
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
